@@ -5,14 +5,16 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 
-import dev.salt.Ring20.dto.calendarEventDtos.CalendarEventDto;
 import dev.salt.Ring20.entity.*;
+import dev.salt.Ring20.entity.enums.CallBackStatus;
 import dev.salt.Ring20.repository.ActivityLogRepository;
 import dev.salt.Ring20.repository.CallbackPreferenceRepository;
+import dev.salt.Ring20.repository.ScheduledCallRepository;
 import dev.salt.Ring20.repository.UserRepository;
 import dev.salt.Ring20.repository.WorkoutRepository;
+import dev.salt.Ring20.service.data.CalendarEventData;
 import java.time.LocalDateTime;
-import java.time.LocalTime;
+import java.time.ZoneOffset;
 import java.util.List;
 import java.util.Optional;
 import org.junit.jupiter.api.BeforeEach;
@@ -28,6 +30,7 @@ class CalendarServiceTest {
     @Mock private UserRepository userRepository;
     @Mock private ActivityLogRepository activityLogRepository;
     @Mock private CallbackPreferenceRepository callbackPreferenceRepository;
+    @Mock private ScheduledCallRepository scheduledCallRepository;
     @Mock private WorkoutRepository workoutRepository;
 
     @InjectMocks private CalendarService calendarService;
@@ -38,6 +41,7 @@ class CalendarServiceTest {
     void setUp() {
         testUser = new User("Test User", 1, "Context", "clerk_123");
         testUser.setId(1L);
+        testUser.setTimeZone("UTC");
     }
 
     @Test
@@ -69,14 +73,35 @@ class CalendarServiceTest {
         event.setTime(LocalDateTime.of(2026, 8, 20, 18, 0));
         testUser.getAttendingEvents().add(event);
 
-        CallbackPreference callPref = new CallbackPreference();
-        callPref.setId(300L);
-        callPref.setDay(DayOfWeekType.MONDAY);
-        callPref.setTime(LocalTime.of(15, 0));
+        ScheduledCall call1 = new ScheduledCall();
+        call1.setId(300L);
+        call1.setTargetTime(LocalDateTime.of(2026, 8, 3, 15, 0).toInstant(ZoneOffset.UTC));
+        call1.setCallBackStatus(CallBackStatus.PENDING);
 
-        when(callbackPreferenceRepository.findByUserId(1L)).thenReturn(List.of(callPref));
+        ScheduledCall call2 = new ScheduledCall();
+        call2.setId(301L);
+        call2.setTargetTime(LocalDateTime.of(2026, 8, 10, 15, 0).toInstant(ZoneOffset.UTC));
+        call2.setCallBackStatus(CallBackStatus.TRIGGERED);
 
-        List<CalendarEventDto> result = calendarService.getMonthlyCalendar(1L, year, month);
+        ScheduledCall call3 = new ScheduledCall();
+        call3.setId(302L);
+        call3.setTargetTime(LocalDateTime.of(2026, 8, 17, 15, 0).toInstant(ZoneOffset.UTC));
+        call3.setCallBackStatus(CallBackStatus.RECEIVED);
+
+        ScheduledCall call4 = new ScheduledCall();
+        call4.setId(303L);
+        call4.setTargetTime(LocalDateTime.of(2026, 8, 24, 15, 0).toInstant(ZoneOffset.UTC));
+        call4.setCallBackStatus(CallBackStatus.COMPLETED);
+
+        ScheduledCall call5 = new ScheduledCall();
+        call5.setId(304L);
+        call5.setTargetTime(LocalDateTime.of(2026, 8, 31, 15, 0).toInstant(ZoneOffset.UTC));
+        call5.setCallBackStatus(CallBackStatus.CANCELLED);
+
+        when(scheduledCallRepository.findByUserId(1L))
+                .thenReturn(List.of(call1, call2, call3, call4, call5));
+
+        List<CalendarEventData> result = calendarService.getMonthlyCalendar(1L, year, month);
 
         assertEquals(7, result.size());
         for (int i = 0; i < result.size() - 1; i++) {
@@ -86,10 +111,16 @@ class CalendarServiceTest {
                     "The list is not sorted correctly!");
         }
 
-        CalendarEventDto eventDto =
+        CalendarEventData eventDto =
                 result.stream().filter(e -> e.type().equals("EVENT")).findFirst().orElseThrow();
         assertEquals("Yoga Event", eventDto.title());
         assertEquals("EVENT-200", eventDto.id());
+
+        CalendarEventData callDto =
+                result.stream().filter(e -> e.type().equals("CALL")).findFirst().orElseThrow();
+        assertEquals(300L, callDto.scheduledCallId());
+        assertEquals(CallBackStatus.PENDING, callDto.callBackStatus());
+        assertEquals("300", callDto.id());
     }
 
     @Test
@@ -107,6 +138,7 @@ class CalendarServiceTest {
     @Test
     void getMonthlyCalendar_shouldFilterEventsOutsideOfRequestedMonth() {
         when(userRepository.findById(1L)).thenReturn(Optional.of(testUser));
+        when(scheduledCallRepository.findByUserId(1L)).thenReturn(List.of());
 
         Event validEvent = new Event();
         validEvent.setId(1L);
@@ -120,16 +152,17 @@ class CalendarServiceTest {
 
         testUser.getAttendingEvents().addAll(List.of(validEvent, invalidEvent));
 
-        List<CalendarEventDto> result = calendarService.getMonthlyCalendar(1L, 2026, 8);
+        List<CalendarEventData> result = calendarService.getMonthlyCalendar(1L, 2026, 8);
 
         assertEquals(1, result.size(), "Should only show 1 event because the other was in July");
-        assertEquals("EVENT-1", result.get(0).id());
-        assertEquals("August Event", result.get(0).title());
+        assertEquals("EVENT-1", result.getFirst().id());
+        assertEquals("August Event", result.getFirst().title());
     }
 
     @Test
     void getMonthlyCalendar_shouldKeepAttendedEventsAfterTheyHaveEnded() {
         when(userRepository.findById(1L)).thenReturn(Optional.of(testUser));
+        when(scheduledCallRepository.findByUserId(1L)).thenReturn(List.of());
 
         Event pastEvent = new Event();
         pastEvent.setId(3L);
@@ -137,7 +170,7 @@ class CalendarServiceTest {
         pastEvent.setTime(LocalDateTime.of(2020, 8, 15, 12, 0));
         testUser.getAttendingEvents().add(pastEvent);
 
-        List<CalendarEventDto> result = calendarService.getMonthlyCalendar(1L, 2020, 8);
+        List<CalendarEventData> result = calendarService.getMonthlyCalendar(1L, 2020, 8);
 
         assertEquals(1, result.size());
         assertEquals("EVENT-3", result.getFirst().id());
@@ -148,6 +181,7 @@ class CalendarServiceTest {
     @Test
     void getMonthlyCalendar_shouldFormatEventDescriptionAndLocationCorrectly() {
         when(userRepository.findById(1L)).thenReturn(Optional.of(testUser));
+        when(scheduledCallRepository.findByUserId(1L)).thenReturn(List.of());
 
         Event event = new Event();
         event.setId(10L);
@@ -159,12 +193,12 @@ class CalendarServiceTest {
 
         testUser.getAttendingEvents().add(event);
 
-        List<CalendarEventDto> result = calendarService.getMonthlyCalendar(1L, 2026, 8);
+        List<CalendarEventData> result = calendarService.getMonthlyCalendar(1L, 2026, 8);
 
         assertEquals(1, result.size());
         assertEquals(
                 "A fun workshop - Salt HQ, Stockholm",
-                result.get(0).description(),
+                result.getFirst().description(),
                 "The description was not formatted correctly!");
     }
 
@@ -174,9 +208,9 @@ class CalendarServiceTest {
         when(activityLogRepository.findByUserIdAndStatusAndCompletedAtBetween(
                         any(), any(), any(), any()))
                 .thenReturn(List.of());
-        when(callbackPreferenceRepository.findByUserId(1L)).thenReturn(List.of());
+        when(scheduledCallRepository.findByUserId(1L)).thenReturn(List.of());
 
-        List<CalendarEventDto> result = calendarService.getMonthlyCalendar(1L, 2026, 8);
+        List<CalendarEventData> result = calendarService.getMonthlyCalendar(1L, 2026, 8);
 
         assertTrue(result.isEmpty(), "The calendar should be completely empty");
     }
@@ -185,14 +219,35 @@ class CalendarServiceTest {
     void getMonthlyCalendar_shouldHandleLeapYearsForScheduledCalls() {
         when(userRepository.findById(1L)).thenReturn(Optional.of(testUser));
 
-        CallbackPreference callPref = new CallbackPreference();
-        callPref.setId(1L);
-        callPref.setDay(DayOfWeekType.THURSDAY);
-        callPref.setTime(LocalTime.of(10, 0));
+        ScheduledCall call1 = new ScheduledCall();
+        call1.setId(1L);
+        call1.setTargetTime(LocalDateTime.of(2024, 2, 1, 10, 0).toInstant(ZoneOffset.UTC));
+        call1.setCallBackStatus(CallBackStatus.PENDING);
 
-        when(callbackPreferenceRepository.findByUserId(1L)).thenReturn(List.of(callPref));
+        ScheduledCall call2 = new ScheduledCall();
+        call2.setId(2L);
+        call2.setTargetTime(LocalDateTime.of(2024, 2, 8, 10, 0).toInstant(ZoneOffset.UTC));
+        call2.setCallBackStatus(CallBackStatus.PENDING);
 
-        List<CalendarEventDto> result = calendarService.getMonthlyCalendar(1L, 2024, 2);
+        ScheduledCall call3 = new ScheduledCall();
+        call3.setId(3L);
+        call3.setTargetTime(LocalDateTime.of(2024, 2, 15, 10, 0).toInstant(ZoneOffset.UTC));
+        call3.setCallBackStatus(CallBackStatus.PENDING);
+
+        ScheduledCall call4 = new ScheduledCall();
+        call4.setId(4L);
+        call4.setTargetTime(LocalDateTime.of(2024, 2, 22, 10, 0).toInstant(ZoneOffset.UTC));
+        call4.setCallBackStatus(CallBackStatus.PENDING);
+
+        ScheduledCall call5 = new ScheduledCall();
+        call5.setId(5L);
+        call5.setTargetTime(LocalDateTime.of(2024, 2, 29, 10, 0).toInstant(ZoneOffset.UTC));
+        call5.setCallBackStatus(CallBackStatus.PENDING);
+
+        when(scheduledCallRepository.findByUserId(1L))
+                .thenReturn(List.of(call1, call2, call3, call4, call5));
+
+        List<CalendarEventData> result = calendarService.getMonthlyCalendar(1L, 2024, 2);
 
         assertEquals(5, result.size());
         assertEquals(LocalDateTime.of(2024, 2, 29, 10, 0), result.get(4).time());
@@ -201,6 +256,7 @@ class CalendarServiceTest {
     @Test
     void getMonthlyCalendar_shouldUseFallbackNameForDeletedWorkout() {
         when(userRepository.findById(1L)).thenReturn(Optional.of(testUser));
+        when(scheduledCallRepository.findByUserId(1L)).thenReturn(List.of());
 
         ActivityLog workoutLog = new ActivityLog();
         workoutLog.setId(50L);
@@ -213,15 +269,16 @@ class CalendarServiceTest {
 
         when(workoutRepository.findById(999L)).thenReturn(Optional.empty());
 
-        List<CalendarEventDto> result = calendarService.getMonthlyCalendar(1L, 2026, 8);
+        List<CalendarEventData> result = calendarService.getMonthlyCalendar(1L, 2026, 8);
 
         assertEquals(1, result.size());
-        assertEquals("Deleted training", result.get(0).title());
+        assertEquals("Deleted training", result.getFirst().title());
     }
 
     @Test
     void getMonthlyCalendar_shouldFormatEventWithoutVenue() {
         when(userRepository.findById(1L)).thenReturn(Optional.of(testUser));
+        when(scheduledCallRepository.findByUserId(1L)).thenReturn(List.of());
 
         Event event = new Event();
         event.setId(15L);
@@ -231,9 +288,9 @@ class CalendarServiceTest {
 
         testUser.getAttendingEvents().add(event);
 
-        List<CalendarEventDto> result = calendarService.getMonthlyCalendar(1L, 2026, 8);
+        List<CalendarEventData> result = calendarService.getMonthlyCalendar(1L, 2026, 8);
 
         assertEquals(1, result.size());
-        assertEquals("Gothenburg", result.get(0).description());
+        assertEquals("Gothenburg", result.getFirst().description());
     }
 }
